[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mt5-trigger"
version = "0.1.0"
description = "Monitor MT5 investor accounts and send WhatsApp alerts via OpenClaw"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "mt5linux>=0.1.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
    "uvicorn>=0.32.0",
]

[project.optional-dependencies]
bridge = ["mt5-mac-bridge[bridge]>=0.1.0", "mt5linux>=0.1.0"]
linux = ["mt5linux>=0.1.0"]
native = ["MetaTrader5>=5.0.45"]
dev = ["mt5-mac-bridge[mock,bridge]>=0.1.0", "mt5linux>=0.1.0"]
charts = ["mplfinance>=0.12.9b7", "matplotlib>=3.8.0", "pandas>=2.0.0"]

[project.scripts]
mt5-trigger = "mt5_trigger.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mt5_trigger"]

[tool.hatch.build.targets.sdist]
include = ["src/mt5_trigger", "config", "README.md"]
